k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-flask-app-service
  namespace: m
spec:
  selector:
    app: my-flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
