k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-flask-app-ingress
  namespace: m
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /otusapp/dmitriev($|/)(.*)
          pathType: Prefix
          backend:
            service: 
              name: my-flask-app-service
              port:
                number: 80
